Added animate + bootstrap CSS, scrapped default index

--- a/Roomate-app/public/css/default.css
+++ b/Roomate-app/public/css/default.css
@@ -1,3 +1,8 @@
 ﻿body {
+  font-family: 'Raleway', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+}
 
+.test-border {
+  outline: 5px dotted green;
 }
