--- a/Roomate-app/public/css/default.css
+++ b/Roomate-app/public/css/default.css
@@ -4,7 +4,7 @@
 
 /* UNIVERSAL */
 body {
-  background: linear-gradient(#FFFFFF, #F2F2F2);
+  background: linear-gradient(#ffffff 80%, #f2f2f2);
 
   font-family: 'Raleway', sans-serif;
   font-family: 'Montserrat', sans-serif;
