--- a/Roomate-app/public/css/default.css
+++ b/Roomate-app/public/css/default.css
@@ -57,6 +57,7 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 .home-logo {
@@ -102,4 +103,11 @@ button {
   height: auto;
 
   padding-right: 10px;
+}
+
+@media (max-width: 576px) {
+  .home-logo {
+      width: 90vw;
+      height: auto;
+  }
 }
