Made more mobile changes

--- a/Roomate-app/public/css/default.css
+++ b/Roomate-app/public/css/default.css
@@ -111,3 +111,10 @@ button {
       height: auto;
   }
 }
+
+@media (max-height: 475px) {
+  .home-logo {
+      height: 40vh;
+      width: auto;
+  }
+}
