--- a/Roomate-app/public/css/default.css
+++ b/Roomate-app/public/css/default.css
@@ -31,6 +31,12 @@ p {
   color: #4F4F4F;
 }
 
+form {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.25em;
+    color: #4F4F4F;
+}
+
 .page {
   height: 100%;
   height: 100vh;
