--- a/Roomate-app/public/css/default.css
+++ b/Roomate-app/public/css/default.css
@@ -25,6 +25,11 @@ h3 {
   font-size: 2em;
 }
 
+h4 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.5em;
+}
+
 p {
   font-family: 'Montserrat', sans-serif;
   font-size: 1.25em;
@@ -37,33 +42,57 @@ form {
     color: #4F4F4F;
 }
 
-.page {
-  height: 100%;
-  height: 100vh;
-}
-
 button {
   border: none;
   background: none;
   padding: 0;
 }
 
-/* HOME */
-.home-items-container {
-  min-height: 100%;
-	min-height: 100vh;
-
-	display: flex;
-	align-items: center;
+.page {
+  height: 100%;
+  height: 100vh;
 }
 
-.home-items {
+.center-items-container {
+  min-height: 100%;
+  min-height: 100vh;
+
+  display: flex;
+  align-items: center;
+}
+
+.center-items {
   margin: auto;
 
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+}
+
+.blue-btn {
+  padding: 0vh 2vw;
+  height: 50px;
+
+  background: #88CCF1;
+  border-radius: 20px;
+  border: 0px;
+
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 1.25em;
+  color: #FFFFFF;
+
+  display: flex;
+  align-items: center;
+}
+
+.blue-btn:hover {
+  background-color: #449DD1;
+
+  -webkit-transition: all 0.125s ease-out;
+  transition: all 0.125s ease-out;
 }
 
 .home-logo {
@@ -79,31 +108,6 @@ button {
   padding-bottom: 15px;
 }
 
-.login-btn {
-  padding: 0vh 2vw;
-  height: 50px;
-
-  background: #88CCF1;
-  border-radius: 20px;
-  border: 0px;
-
-  font-family: 'Montserrat', sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 1.25em;
-  color: #FFFFFF;
-
-  display: flex;
-	align-items: center;
-}
-
-.login-btn:hover {
-  background-color: #449DD1;
-
-	-webkit-transition: all 0.125s ease-out;
-	transition: all 0.125s ease-out;
-}
-
 .login-btn-img {
   width: 35px;
   height: auto;
@@ -113,14 +117,14 @@ button {
 
 @media (max-width: 576px) {
   .home-logo {
-      width: 90vw;
-      height: auto;
+    width: 90vw;
+    height: auto;
   }
 }
 
 @media (max-height: 475px) {
   .home-logo {
-      height: 40vh;
-      width: auto;
+    height: 40vh;
+    width: auto;
   }
 }
