--- a/Roomate-app/public/css/joinOrCreatePage.css
+++ b/Roomate-app/public/css/joinOrCreatePage.css
@@ -26,11 +26,10 @@
 
 /* The popup form - hidden by default */
 .form-popup {
+  margin: 80px 0 0 0;
   display: none;
   position: fixed;
   bottom: center;
-  right: 245px;
-  top: 145px;
   border: 3px solid #f1f1f1;
   z-index: 9; right: center;
 }
