--- a/Roomate-app/public/css/default.css
+++ b/Roomate-app/public/css/default.css
@@ -70,6 +70,20 @@ button {
   text-align: center;
 }
 
+.top-bar-logo {
+  margin: auto;
+  display: flex;
+
+  padding-top: 10px;
+}
+
+.top-bar {
+  margin: auto;
+  display: flex;
+  align-items: center;
+  padding-top: 10px;
+}
+
 .blue-btn {
   padding: 0vh 2vw;
   height: 50px;
@@ -108,11 +122,11 @@ button {
   padding-bottom: 15px;
 }
 
-.login-btn-img {
-  width: 35px;
-  height: auto;
+.bar-logo {
+  width: auto;
+  height: 80px;
 
-  padding-right: 10px;
+  padding-right: 25px;
 }
 
 @media (max-width: 576px) {
