--- a/Roomate-app/public/css/default.css
+++ b/Roomate-app/public/css/default.css
@@ -5,6 +5,10 @@
 /* UNIVERSAL */
 body {
   background: linear-gradient(#ffffff 80%, #f2f2f2);
+  background-attachment: fixed;
+	background-position: center top;
+	background-repeat: no-repeat;
+	background-size: 100vw auto;
 
   font-family: 'Raleway', sans-serif;
   font-family: 'Montserrat', sans-serif;
@@ -48,11 +52,6 @@ button {
   padding: 0;
 }
 
-.page {
-  height: 100%;
-  height: 100vh;
-}
-
 .center-items-container {
   min-height: 100%;
   min-height: 100vh;
@@ -68,20 +67,6 @@ button {
   flex-direction: column;
   align-items: center;
   text-align: center;
-}
-
-.top-bar-logo {
-  margin: auto;
-  display: flex;
-
-  padding-top: 10px;
-}
-
-.top-bar {
-  margin: auto;
-  display: flex;
-  align-items: center;
-  padding-top: 10px;
 }
 
 .blue-btn {
@@ -109,6 +94,7 @@ button {
   transition: all 0.125s ease-out;
 }
 
+/* INDEX */
 .home-logo {
   width: 450px;
   height: auto;
@@ -122,11 +108,36 @@ button {
   padding-bottom: 15px;
 }
 
-.bar-logo {
+.login-btn-img {
+  width: 35px;
+  height: auto;
+
+  padding-right: 10px;
+}
+
+/* OVERVIEW */
+.overview-container {
+  width: 90vw;
+  padding: 0px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.top-bar-logo {
   width: auto;
   height: 80px;
+}
 
-  padding-right: 25px;
+.top-bar {
+  height: 80px;
+  display: flex;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.space-information {
+  width: 80vw;
+  text-align: center;
 }
 
 @media (max-width: 576px) {
@@ -134,11 +145,43 @@ button {
     width: 90vw;
     height: auto;
   }
+
+  .top-bar {
+    margin-top: 3vh;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .top-bar div button {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .top-bar-logo {
+    width: 0vw;
+    height: 0vh;
+  }
 }
 
 @media (max-height: 475px) {
   .home-logo {
     height: 40vh;
     width: auto;
+  }
+
+  .top-bar {
+    margin-top: 3vh;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .top-bar div button {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .top-bar-logo {
+    width: 0vw;
+    height: 0vh;
   }
 }
