Space Page Outline (#66)
* Added Name and Description to overview, rearranged divs

* made some edits to overview page pushing so mina can edit

* Removed page class, created top-bar on overview and made it mobile responsive

* Formatted web view of space page. Created buttons for viewing separate pages that data dump Tasks and Mates.

* uncommented the onload

--- a/Roomate-app/public/css/default.css
+++ b/Roomate-app/public/css/default.css
@@ -5,6 +5,10 @@
 /* UNIVERSAL */
 body {
   background: linear-gradient(#ffffff 80%, #f2f2f2);
+  background-attachment: fixed;
+	background-position: center top;
+	background-repeat: no-repeat;
+	background-size: 100vw auto;
 
   font-family: 'Raleway', sans-serif;
   font-family: 'Montserrat', sans-serif;
@@ -46,11 +50,6 @@ button {
   border: none;
   background: none;
   padding: 0;
-}
-
-.page {
-  height: 100%;
-  height: 100vh;
 }
 
 .center-items-container {
@@ -95,6 +94,7 @@ button {
   transition: all 0.125s ease-out;
 }
 
+/* INDEX */
 .home-logo {
   width: 450px;
   height: auto;
@@ -115,10 +115,59 @@ button {
   padding-right: 10px;
 }
 
+/* OVERVIEW */
+.top-bar-logo {
+  width: auto;
+  height: 80px;
+}
+
+.top-bar {
+  height: 80px;
+  display: flex;
+  align-items: center;
+  margin-top: 40px;
+}
+
+.space {
+  min-width: 90%;
+  min-width: 90vw;
+
+  padding: 0;
+
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.space-content {
+  min-height: 50%;
+  min-height: 50vh;
+}
+
+.space-information {
+  width: 80vw;
+  text-align: center;
+}
+
 @media (max-width: 576px) {
   .home-logo {
     width: 90vw;
     height: auto;
+  }
+
+  .top-bar {
+    margin-top: 3vh;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .top-bar div button {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .top-bar-logo {
+    width: 0vw;
+    height: 0vh;
   }
 }
 
@@ -126,5 +175,21 @@ button {
   .home-logo {
     height: 40vh;
     width: auto;
+  }
+
+  .top-bar {
+    margin-top: 3vh;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .top-bar div button {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .top-bar-logo {
+    width: 0vw;
+    height: 0vh;
   }
 }
