show user icon in display mates

--- a/Roomate-app/public/css/default.css
+++ b/Roomate-app/public/css/default.css
@@ -94,6 +94,11 @@ button {
   transition: all 0.125s ease-out;
 }
 
+.user-icon {
+  width: 50px;
+  height: auto;
+}
+
 /* INDEX */
 .home-logo {
   width: 450px;
