moved mates to overview (#130)
* Fixed mobile responsiveness for current

* Added mates table to overview, along with matelistinit function

* mate list in mobile shows names

--- a/Roomate-app/public/css/default.css
+++ b/Roomate-app/public/css/default.css
@@ -31,7 +31,7 @@ h3 {
 
 h4 {
   font-family: 'Montserrat', sans-serif;
-  font-size: 1.5em;
+  font-size: 1.3em;
 }
 
 p {
@@ -70,8 +70,9 @@ button {
 }
 
 .blue-btn {
+  margin: 2.5px;
   padding: 0vh 2vw;
-  height: 50px;
+  height: 45px;
 
   background: #88CCF1;
   border-radius: 20px;
@@ -79,7 +80,7 @@ button {
 
   font-family: 'Montserrat', sans-serif;
   font-style: normal;
-  font-weight: bold;
+  /* font-weight: bold; */
   font-size: 1.25em;
   color: #FFFFFF;
 
@@ -92,11 +93,6 @@ button {
 
   -webkit-transition: all 0.125s ease-out;
   transition: all 0.125s ease-out;
-}
-
-.user-icon {
-  width: 50px;
-  height: auto;
 }
 
 /* INDEX */
@@ -123,15 +119,27 @@ button {
 /* OVERVIEW */
 .top-bar-logo {
   width: auto;
-  height: 80px;
+  height: 100px;
 }
 
 .top-bar {
-  height: 80px;
+  height: 10vh;
   display: flex;
-  align-items: center;
-  margin-top: 40px;
+
+  overflow-y: visible;
 }
+
+.space-information {
+  width: 80vw;
+  text-align: center;
+
+  padding: 5px;
+}
+
+/* .profile-btns {
+  display: flex;
+  justify-content: flex-end;
+} */
 
 .space {
   min-width: 90%;
@@ -141,60 +149,102 @@ button {
 
   margin-left: auto;
   margin-right: auto;
+  margin-top: 3vh;
+  margin-bottom: 3vh;
 }
 
 .space-content {
-  min-height: 50%;
-  min-height: 50vh;
+  min-height: 79%;
+  min-height: 79vh;
+
+  display: flex;
+  margin-top: 5vh;
 }
 
-.space-information {
-  width: 80vw;
+/* Mate Section */
+.user-icon {
+  width: 50px;
+  height: auto;
+  border-radius: 50px;
+}
+
+.mate-sect {
+  /* width: 20vw; */
   text-align: center;
+  /* align-items: center;
+  justify-content: center; */
+
+  margin-right: 20px;
 }
 
-@media (max-width: 576px) {
+.mate-sect table {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mate-sect tr {
+  min-height: 0px;
+
+  padding-left: auto;
+  padding-right: auto;
+}
+
+@media (max-width: 825px) {
+  .blue-btn {
+    padding: 0vh 15px;
+    font-size: 1em;
+  }
+
   .home-logo {
-    width: 90vw;
     height: auto;
+    width: 80vw;
   }
 
   .top-bar {
-    margin-top: 3vh;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .top-bar div button {
-    margin-left: auto;
-    margin-right: auto;
+    height: auto;
+    overflow-y: scroll;
   }
 
   .top-bar-logo {
-    width: 0vw;
-    height: 0vh;
+    display: none;
+  }
+
+  .space-information {
+    text-align: left;
+  }
+
+  .space {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .space-content {
+    /* flex-direction: column; */
+    /* align-items: center; */
+
+    margin-top: 0px;
+  }
+
+  .mate-sect {
+    /* min-width: 140px; */
+  }
+
+  .mate-sect table {
+    /* min-width: 140px; */
+  }
+
+}
+
+@media (max-width: 450px) {
+  .mate-sect {
+    width: 75px;
+    font-size: 0.70em;
   }
 }
 
-@media (max-height: 475px) {
+@media (max-height: 500px) {
   .home-logo {
     height: 40vh;
     width: auto;
-  }
-
-  .top-bar {
-    margin-top: 3vh;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .top-bar div button {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .top-bar-logo {
-    width: 0vw;
-    height: 0vh;
   }
 }
