--- a/Roomate-app/public/css/default.css
+++ b/Roomate-app/public/css/default.css
@@ -80,12 +80,13 @@ button {
 
   font-family: 'Montserrat', sans-serif;
   font-style: normal;
-  /* font-weight: bold; */
-  font-size: 1.25em;
+  font-size: 1.275em;
   color: #FFFFFF;
 
   display: flex;
   align-items: center;
+
+  text-align: center;
 }
 
 .blue-btn:hover {
@@ -93,6 +94,14 @@ button {
 
   -webkit-transition: all 0.125s ease-out;
   transition: all 0.125s ease-out;
+}
+
+.show-at-450 {
+  display: none;
+}
+
+.show-at-825 {
+  display: none;
 }
 
 /* INDEX */
@@ -125,8 +134,25 @@ button {
 .top-bar {
   height: 10vh;
   display: flex;
+}
 
-  overflow-y: visible;
+.space-information {
+  width: 80vw;
+  text-align: center;
+
+  padding: 5px;
+}
+
+.profile-btns {
+  width: 150px;
+  height: 100px;
+  flex-direction: column;
+  align-items: flex-end;
+  align-content: flex-end;
+}
+
+.profile-btns button {
+  float: right;
 }
 
 .space-information {
@@ -159,6 +185,9 @@ button {
 
   display: flex;
   margin-top: 5vh;
+  padding-top: 2vh;
+
+  border-top: 1px solid gray;
 }
 
 /* Mate Section */
@@ -169,11 +198,8 @@ button {
 }
 
 .mate-sect {
-  /* width: 20vw; */
+  min-width: 195px;
   text-align: center;
-  /* align-items: center;
-  justify-content: center; */
-
   margin-right: 20px;
 }
 
@@ -189,10 +215,22 @@ button {
   padding-right: auto;
 }
 
+/* Task Section */
+.task-sect {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.task-sect .blue-btn {
+  align-self: flex-end;
+}
+
+
 @media (max-width: 825px) {
   .blue-btn {
     padding: 0vh 15px;
-    font-size: 1em;
+    border-radius: 15px;
   }
 
   .home-logo {
@@ -202,11 +240,6 @@ button {
 
   .top-bar {
     height: auto;
-    overflow-y: scroll;
-  }
-
-  .top-bar-logo {
-    display: none;
   }
 
   .space-information {
@@ -219,26 +252,45 @@ button {
   }
 
   .space-content {
-    /* flex-direction: column; */
-    /* align-items: center; */
-
-    margin-top: 0px;
+    margin-top: 10px;
   }
 
   .mate-sect {
-    /* min-width: 140px; */
+    min-width: 100px;
   }
 
-  .mate-sect table {
-    /* min-width: 140px; */
+  .mate-sect button {
+    margin-bottom: 20px;
   }
 
-}
+  .hide-at-825 {
+    display: none;
+  }
+
+  .show-at-825 {
+    display: inline-flex;
+  }
 
 @media (max-width: 450px) {
+  .space-content {
+    font-size: 1em;
+  }
+
   .mate-sect {
-    width: 75px;
-    font-size: 0.70em;
+    min-width: 75px;
+    font-size: 0.75em;
+  }
+
+  .mate-sect .blue-btn{
+    font-size: 2em;
+  }
+
+  .hide-at-450 {
+    display: none;
+  }
+
+  .show-at-450 {
+    display: inline-flex;
   }
 }
 
