--- a/Roomate-app/public/css/default.css
+++ b/Roomate-app/public/css/default.css
@@ -93,26 +93,6 @@ table {
   text-align: center;
 }
 
-.orange-btn {
-  margin: 2.5px;
-  padding: 0vh 2vw;
-  height: 45px;
-
-  background: #FFCE95;
-  border-radius: 20px;
-  border: 0px;
-
-  font-family: 'Montserrat', sans-serif;
-  font-style: normal;
-  font-size: 1.275em;
-  color: #FFFFFF;
-
-  display: flex;
-  align-items: center;
-
-  text-align: center;
-}
-
 .blue-btn:hover {
   background-color: #449DD1;
 
@@ -243,48 +223,18 @@ table {
   align-self: flex-end;
 }
 
-.task-sect .orange-btn {
-  align-self: flex-end;
-}
-
 .task-sect table {
   width: 100%;
 }
 
 .task-sect tr {
-  border-left: 1px solid gray;
-  border-right: 1px solid gray;
+  border-left: 1.5px solid gray;
   width: 100%;
 }
 
-.task-sect tr .blue-btn {
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: 0;
-  margin-right: 0;
-
-  padding-left: auto;
-  padding-right: auto;
-
-  height: 30px;
-  width: auto;
-
-  font-size: 0.75em;
-}
-
-.task-sect tr .orange-btn {
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: 0;
-  margin-right: 0;
-
-  padding-left: auto;
-  padding-right: auto;
-
-  height: 30px;
-  width: auto;
-
-  font-size: 0.75em;
+.task-sect tr td:nth-child(2n) {
+  border-right: 1.5px solid gray;
+  text-align: right;
 }
 
 .task-sect td  {
@@ -293,6 +243,8 @@ table {
 
 .task-sect td button {
   float: right;
+  font-size: 1em;
+  max-height: 35px;
 }
 
 .task-sect td input {
@@ -300,12 +252,19 @@ table {
 }
 
 .task-sect tr:first-child {
-  border-top: 1px solid gray;
+  border-top: 1.5px solid gray;
 }
 
 .task-sect tr:nth-child(5n) {
-  border-top: 1px solid gray;
-  border-bottom: 1px solid gray;
+  border-top: 1.5px solid gray;
+  border-bottom: 1.5px solid gray;
+  border-left: none;
+  border-right: none;
+}
+
+.task-sect tr:nth-child(5n) td:nth-child(2) {
+  border-top: 1.5px solid gray;
+  border-bottom: 1.5px solid gray;
   border-left: none;
   border-right: none;
 }
@@ -316,6 +275,25 @@ table {
 
 .task-sect tr:last-child {
   border-bottom: none;
+}
+
+.task-sect tr:last-child td:nth-child(2) {
+  border-bottom: none;
+}
+
+.task-btn:hover {
+  font-weight: bold;
+  color: #FFCE95;
+}
+
+.delete-btn {
+  color: #FFCE95;
+  font-style: italic;
+  font-weight: bold;
+}
+
+.delete-btn:hover {
+  text-decoration: underline;
 }
 
 @media (max-width: 825px) {
@@ -350,32 +328,20 @@ table {
     min-width: 100px;
   }
 
-  .hide-at-825 {
-    display: none;
-  }
-
-  .show-at-825 {
-    display: inline-flex;
-  }
-
-  .space-content {
-    margin-top: 10px;
-  }
-
   .space-content table {
     margin-top: 0;
   }
 
-  .mate-sect {
-    min-width: 100px;
-  }
-
   .hide-at-825 {
     display: none;
   }
 
   .show-at-825 {
     display: inline-flex;
+  }
+
+  .task-sect table {
+    font-size: 0.75em;
   }
 
 @media (max-width: 450px) {
