Added ease transition to task button hover

--- a/Roomate-app/public/css/default.css
+++ b/Roomate-app/public/css/default.css
@@ -284,6 +284,9 @@ table {
 .task-btn:hover {
   font-weight: bold;
   color: #FFCE95;
+
+  -webkit-transition: all 0.125s ease-out;
+  transition: all 0.125s ease-out;
 }
 
 .delete-btn {
