Changed invite --> add, resize space information depending on media w… (#152)
* Changed invite --> add, resize space information depending on media width

* Added ease transition to task button hover

--- a/Roomate-app/public/css/default.css
+++ b/Roomate-app/public/css/default.css
@@ -284,6 +284,9 @@ table {
 .task-btn:hover {
   font-weight: bold;
   color: #FFCE95;
+
+  -webkit-transition: all 0.125s ease-out;
+  transition: all 0.125s ease-out;
 }
 
 .delete-btn {
@@ -309,6 +312,14 @@ table {
 
   .space-information {
     text-align: left;
+  }
+
+  .space-information h2 {
+    font-size: 2em;
+  }
+
+  .space-information h4 {
+    font-size: 1.125em;
   }
 
   .space {
